kubernetes-optional/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: catdog-frontend
  labels:
    app: catdog-frontend
    env: catdog-eks
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: catdog-frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catdog-frontend
  labels:
    app: catdog-frontend
    env: catdog-eks
spec:
  replicas: 3
  selector:
    matchLabels:
      app: catdog-frontend
  template:
    metadata:
      labels:
        app: catdog-frontend
        env: catdog-eks
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          readOnly: true
          name: nginx-default
      - name: envoy
        image: 111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.9.0.0-prod
#        image: 111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.8.0.2-beta
        securityContext:
          runAsUser: 1337
      volumes:
        - name: nginx-default
          configMap:
            name: nginx-default
            items:
              - key: default.conf
                path: default.conf
