kubernetes-optional/alb-ingress-frontend.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
  labels:
    env: catdog-eks
  name: catdog-eks
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: catdog-frontend
              servicePort: 80
